--- a/Estilo/css/estilos.css
+++ b/Estilo/css/estilos.css
@@ -1,31 +1,21 @@
 body{
-    /*font-family: 'Dancing Script', cursive;*/
     font-family: 'Kalam', cursive;
     color: black;
-}
-body::before{
-    content: "";
-   /* background-image: url(../Imagens/desktop.png);*/
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    background-position: center;
+    background: linear-gradient(to bottom, #ffffff, #C11E65);
+  
 }
 .cabecalho {
-    /*header*/
     display: flex;
     justify-content: center;
+    margin-bottom: 0;
 }
-.selecao-personagens{
- display: flex;
- align-items: center;
- gap: 45px;
- min-height: calc(100vh - 152px);
- justify-content: center;
-}
+.selecao-personagens {
+    display: flex;
+    align-items: center;
+    gap: 45px;
+    min-height: calc(100vh - 152px - 20rem); /* Ajuste a altura mínima aqui */
+    justify-content: center;
+  }
 .selecao-personagens .lista-personagens{
     display: flex;
     flex-wrap: wrap;
@@ -44,7 +34,7 @@ body::before{
     font-size: 20px;
     letter-spacing: 4px;
     text-transform: uppercase;
-    border-bottom: 2px solid #fd00d3;
+    border-bottom: 2px solid #C11E65;
     width: 100%;
     text-align: center;
 }
@@ -53,27 +43,41 @@ body::before{
     height: 100%;
 }
 .lista-personagens .personagem.selecionado{
-    box-shadow: 0px 0px 24px 5px #fd00d3;
+    box-shadow: 0px 0px 24px 5px #C11E65;
     
 }
 .personagem-selecionado{
    text-align: center;
-   max-height: 530px;
-
+   max-height: 650px;
+   gap: 30px;
 }
 .personagem-selecionado .personagem-grande{
-    width: 430px;
-    height: 430px;
+    width: 400px;
+    height: 400px;
 }
 .personagem-selecionado .nome-personagem{
-    border-bottom: 2px solid #fd00d3;
+    border-bottom: 2px solid #be0053;
     letter-spacing: 4px;
     text-transform: uppercase;
+    text-align: center;
 }
 .personagem-selecionado .descricao-personagem{
-    font-size: 16px;
+    font-size: 18px;
     line-height: 22px;
-    text-align: center;
+    text-align: justify;
     margin-top: 20px;
     width: 420px;
 }
+.footer {
+    margin-top: 1rem;
+    padding: 2rem 0 2rem 0;
+    border-top: 8px solid #C11E65;
+    background: #C11E65;
+    text-align: center;
+    display: grid;
+    justify-items: center;
+  }
+.footer p {
+    color: black;
+    font-size: 13px;
+  }
